--- a/style.css
+++ b/style.css
@@ -18,8 +18,8 @@ body {
 }
 
 #chat {
-    margin: 0 auto;
-    max-width: 700px;
+    margin: 10 auto;
+    max-width: 500px;
     background-color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     border-radius: 5px;
@@ -31,14 +31,15 @@ body {
     flex-direction: column-reverse;
     max-height: 400px;
     overflow-y: scroll;
-    padding: 10px;
+    
 }
 
 #messages p {
-    margin-bottom: 10px;
-    border-bottom: 1px solid #ddd;
-    padding-bottom: 10px;
+    margin-bottom: 2px;
+    padding-bottom: 2px;
 }
+
+
 
 form {
     display: flex;
@@ -50,8 +51,7 @@ form {
 
 input[type="text"] {
     flex: 1;
-    padding: 10px;
-    border: 1px solid #ccc;
+    padding: 10px 10px; 
     border-radius: 5px;
     margin-right: 10px;
     transition: border-color 0.3s ease;
@@ -73,4 +73,34 @@ input[type="submit"] {
 
 input[type="submit"]:hover {
     background-color: #3e8e41;
+}
+
+.me{
+    float: right;
+    margin-left: 40%;
+    background-color: cornflowerblue;
+    border-radius: 10px;
+    word-wrap: break-word;  
+    max-width: 60%;
+}
+
+
+.message{
+    margin-top: 5px;
+    background-color: #4CAF50;
+    border-radius: 10px;
+    word-wrap: break-word;
+    max-width: 60%;
+    min-width: 40%;
+}
+
+.message p, .me p {
+    color: #fff;
+    padding: 15px;   
+}
+
+.info {
+    text-align: center;
+    font-size: 12px;
+    color: #aaa;
 }
