--- a/style.css
+++ b/style.css
@@ -31,14 +31,9 @@ body {
     flex-direction: column-reverse;
     max-height: 400px;
     overflow-y: scroll;
+    margin : auto 6px;
     
 }
-
-#messages p {
-    margin-bottom: 2px;
-    padding-bottom: 2px;
-}
-
 
 
 form {
@@ -96,11 +91,21 @@ input[type="submit"]:hover {
 
 .message p, .me p {
     color: #fff;
-    padding: 15px;   
+    padding: 12px 15px;   
 }
 
+
+
 .info {
-    text-align: center;
     font-size: 12px;
     color: #aaa;
+    margin : auto 7px;
+}
+
+.sender{
+    text-align: right;
+}
+
+.receiver{
+    text-align: left;
 }
