--- a/style.css
+++ b/style.css
@@ -17,7 +17,8 @@ body {
     background-color: #f0f0f0;
 }
 
-#chat, #roomList {
+#chat,
+#roomList {
     margin: 10 auto;
     max-width: 500px;
     background-color: #fff;
@@ -26,29 +27,37 @@ body {
     overflow: hidden;
 }
 
+#chat {
+    display: flex;
+    flex-direction: column;
+    padding: 0 5px 0 15px;
+    justify-content: flex-end;
+    height: 500px;
+}
+
 #messages {
     display: flex;
     flex-direction: column-reverse;
     max-height: 400px;
+    padding-right: 10px;
     overflow-y: scroll;
-    margin : auto 6px;
-    
+
 }
 
 
 form {
     display: flex;
     justify-content: space-between;
+    gap: 10px;
     align-items: center;
-    padding: 10px;
+    padding: 10px 0;
     border-top: 1px solid #ddd;
 }
 
-input[type="text"], input[type="password"]  {
-    flex: 1;
-    padding: 10px 10px; 
+input[type="text"],
+input[type="password"] {
+    padding: 10px 10px;
     border-radius: 5px;
-    margin-right: 10px;
     transition: border-color 0.3s ease;
 }
 
@@ -70,18 +79,21 @@ input[type="submit"]:hover {
     background-color: #3e8e41;
 }
 
-.me{
+.me {
     float: right;
     margin-left: 40%;
     background-color: cornflowerblue;
     border-radius: 10px;
-    word-wrap: break-word;  
+    word-wrap: break-word;
     max-width: 60%;
+    margin-top: 10px;
+    margin-bottom: 3px;
 }
 
 
-.message{
-    margin-top: 5px;
+.message {
+    margin-top: 10px;
+    margin-bottom: 3px;
     background-color: #4CAF50;
     border-radius: 10px;
     word-wrap: break-word;
@@ -89,9 +101,10 @@ input[type="submit"]:hover {
     min-width: 40%;
 }
 
-.message p, .me p {
+.message p,
+.me p {
     color: #fff;
-    padding: 12px 15px;   
+    padding: 12px 15px;
 }
 
 
@@ -99,40 +112,50 @@ input[type="submit"]:hover {
 .info {
     font-size: 12px;
     color: #aaa;
-    margin : auto 7px;
+    margin: auto 7px;
 }
 
-.sender{
+.sender {
     text-align: right;
 }
 
-.receiver{
+.receiver {
     text-align: left;
 }
 
-.button{
-    margin : 10px;
-    padding: 10px;
+.button {
+    margin: 10px;
     border: #3e8e41 1px solid;
     border-radius: 10px;
     background-color: #3e8e41;
     list-style: none;
     text-align: center;
+    transition: all 0.15s ease-in-out;
 }
 
-.button a{
+.button a {
+    padding: 10px;
+    display: block;
     color: #fff;
     text-decoration: none;
-    
+
 }
 
-#roomList{
-    padding : 80px;
+.button:hover {
+    background-color: #4CAF50;
+    border-color: #4CAF50;
 }
 
-.add{
+
+#roomList {
+    padding: 80px;
+}
+
+.add {
     margin-top: 45px;
+    padding: 10px;
     display: flex;
+    justify-content: center;
     background-color: cornflowerblue;
     border-color: cornflowerblue;
     align-self: center;
@@ -140,7 +163,13 @@ input[type="submit"]:hover {
     text-decoration: none;
 }
 
-.deco{
+.add:hover {
+    background-color: #2f759e;
+    border-color: #2f759e;
+}
+
+.deco {
+    padding: 10px;
     margin-top: 45px;
     display: flex;
     background-color: red;
@@ -150,21 +179,32 @@ input[type="submit"]:hover {
     border-color: red;
 }
 
-#connexion{
+.deco:hover {
+    background-color: #dd4141;
+    border-color: #dd4141;
+}
+
+#connexion {
     background-color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     border-radius: 5px;
     flex-direction: column;
 }
 
-#connexion label, #connexion input[type="submit"] {
+#connexion label,
+#connexion input[type="submit"] {
     margin: 10px;
 }
 
-p{
+p {
     text-align: center;
 }
 
-
-
-
+.span-détails {
+    position: absolute;
+    bottom: 0;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 10px;
+}
